manifest/cart-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart-microservice
  labels:
    app: cartapi
    tier: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cartapi
      tier: backend
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: cartapi
        tier: backend
    spec:
      containers:
        - name: cart-app
          image: joemuldowney/go-microservice-api:v1
          ports:
            - containerPort: 8020
