manifest/store-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: store-deployment
  labels:
    app: storeapi
    tier: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: storeapi
      tier: backend
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: storeapi
        tier: backend
    spec:
      containers:
        - name: store-microservice
          image: joemuldowney/django-microservice-api:v3
          ports:
            - containerPort: 8000
