manifest/cart-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cart-service
spec:
  selector:
    app: cartapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8020
  type: NodePort
