manifest/store-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: store-service
spec:
  selector:
    app: storeapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: NodePort
