manifest/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui-service
spec:
  selector:
    app: reactbookstore
    ports:
      - protocol: TCP
        port: 80
        targetPort: 3000
    type: NodePort
